--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,9 @@ body {
   background-repeat: no-repeat;
 
   margin-top: 30px;
+  margin-bottom: 20px;
   width: 350px;
-  height: 80vh;
+  height: auto;
   background-color: #f29c0f;
   color: #ffffff;
   border-radius: 20px;
@@ -74,4 +75,12 @@ body {
 .info h1 {
   font-size: 70px;
   margin-bottom: 30px;
+}
+
+.info h2 {
+  font-size: 40px;
+}
+
+.info h3 {
+  margin-bottom: 70px;
 }
