--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
   margin-bottom: 20px;
   width: 350px;
   height: auto;
-  background-color: #f29c0f;
+  background-color: purple;
   color: #ffffff;
   border-radius: 20px;
   -webkit-border-radius: 20px;
